--- a/vite/vite-test/compA.module.css
+++ b/vite/vite-test/compA.module.css
@@ -3,3 +3,9 @@
   height: 200px;
   background-color: green;
 }
+
+.footer-content {
+  width: 300px;
+  height: 200px;
+  background-color: yellow;
+}
