vite配置文件- css配置流程

--- a/vite/vite-test/index.module.less
+++ b/vite/vite-test/index.module.less
@@ -1,5 +1,9 @@
+// @import url(./var.less); // 在全局定义之后不再引用
+
 .content {
   .main {
-    background-color: pink;
+    background-color: @mainColor;
+    padding: (100px / 2);
+    margin: 100px / 2;
   }
 }
