--- a/my-components/src/style/base.scss
+++ b/my-components/src/style/base.scss
@@ -15,3 +15,19 @@ svg {
   width: 1em;
   height: 1em;
 }
+
+.rm-text-overflow-2 {
+  text-overflow: -o-ellipsis-lastline;
+  overflow: hidden; //溢出内容隐藏
+  text-overflow: ellipsis; //文本溢出部分用省略号表示
+  display: -webkit-box; //特别显示模式
+  -webkit-line-clamp: 2; //行数
+  line-clamp: 2;
+  -webkit-box-orient: vertical; //盒子中内容竖直排列
+}
+
+.rm-text-overflow-1 {
+  overflow: hidden; //超出的文本隐藏
+  text-overflow: ellipsis; //溢出用省略号显示
+  white-space: nowrap; // 默认不换行；
+}
