--- a/my-components/src/style/ui.scss
+++ b/my-components/src/style/ui.scss
@@ -6,8 +6,25 @@
     overflow-y: scroll;
   }
 }
+
 .rm-el-select-margin-right10 {
   .el-select {
     margin-right: 10px;
+  }
+}
+
+.rm-el-popper-padding-bottom0 {
+  padding: 0!important;
+}
+
+.rm-list-tabs__item {
+  .el-tabs__nav {
+    width: 100%;
+    display: flex;
+  }
+
+  .el-tabs__item {
+    flex: 1;
+    text-align: center;
   }
 }
