--- a/uni-app/hot-search/styles/global.scss
+++ b/uni-app/hot-search/styles/global.scss
@@ -7,9 +7,18 @@
 }
 
 // 单行不换行
-.nowrap {
+.line-clamp {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
   -o-text-overflow: ellipsis;
+}
+
+// 卡片视图
+.card {
+  border: 1px solid #f9f9f9;
+  border-radius: 5px;
+  margin: 12px;
+  padding: 12px;
+  box-shadow: 2px 2px 5px 1px rgba(143, 143, 143, 0.1);
 }
